Reformatting directory layout